--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -17,27 +17,27 @@
         <mat-table #sortTabela="matSort" [dataSource]="dataSourceTabela" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nome">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="estado">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="operadora">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="administradora">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
