--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -14,35 +14,71 @@
       <br/>
 
       <mat-card-content>
-        <mat-table #sortTabela="matSort" [dataSource]="dataSourceTabela" matSort class="mat-elevation-z8">
-          <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
-          </ng-container>
+        <div [style.width]="this.tabelaSelecionada ? (window.innerWidth * 0.70) + 'px' : (window.innerWidth * 0.95) + 'px'" style="overflow: auto;">
+          <mat-table style="width: 6000px" #sortTabela="matSort" [dataSource]="dataSourceTabela" matSort class="mat-elevation-z8">
+            <ng-container matColumnDef="id">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="nome">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="nome">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="estado">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="estado">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="operadora">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="operadora">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
+            </ng-container>
 
-          <ng-container matColumnDef="administradora">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
-          </ng-container>
+            <ng-container matColumnDef="administradora">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
+            </ng-container>
 
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
+            <ng-container matColumnDef="reajuste">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Reajuste </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.reajuste}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="idadeMinima">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Min. </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMinima}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="idadeMaxima">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Max.  </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMaxima}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="qtdMinVidas">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Vidas </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinVidas}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="qtdMinTitulares">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Titulares </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinTitulares}} </mat-cell>
+            </ng-container>
+
+            <ng-container [matColumnDef]="profissao.nome" *ngFor="let profissao of todasProfissoes">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> {{profissao.nome }} </mat-header-cell>
+              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer">
+                <div style="overflow: auto; height: 48px;">
+                  {{ getNomesEntidadesPorProfissao(tabela, profissao.nome) }}
+                </div>
+              </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
+        </div>
         <mat-paginator #paginatorTabela [pageSizeOptions]="[15, 50, 100]" [length]="dataSourceTabela.data.length" showFirstLastButtons></mat-paginator>
       </mat-card-content>
     </mat-card>
