--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -18,118 +18,118 @@
           <mat-table style="width: 7000px" [dataSource]="dataSourceOpcao" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="id">
               <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.id}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.id}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estado">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.estado.sigla}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.estado.sigla}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="tabela" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Tabela </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.nome}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="idadeMin">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Min. </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.idadeMinima}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.idadeMinima}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="idadeMax">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Max. </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.idadeMaxima}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.idadeMaxima}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtdMinVidas">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Vidas </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.qtdMinVidas}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.qtdMinVidas}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtdMinTitulares">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Titulares </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.qtdMinTitulares}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.qtdMinTitulares}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="acomodacao" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Acomodacao </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.acomodacao}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.acomodacao}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="coparticipacao" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Coparticipacao </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.coparticipacao ? 'Com' : 'Sem'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.coparticipacao ? 'Com' : 'Sem'}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="administradora" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.administradora.nome}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.administradora.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="operadora" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.operadora.nome}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.operadora.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="produto" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Produto </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.produto.nome}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.produto.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="abrangencia" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Abrangecia </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.produto.abrangencia}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.produto.abrangencia}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="valor0a18anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 0 a 18 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor0a18anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor0a18anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor19a23anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 19 a 23 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor19a23anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor19a23anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor24a28anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 24 a 28 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor24a28anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor24a28anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor29a33anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 29 a 33 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor29a33anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor29a33anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor34a38anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 34 a 38 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor34a38anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor34a38anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor39a43anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 39 a 43 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor39a43anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor39a43anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor44a48anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 44 a 48 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor44a48anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor44a48anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor49a53anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 49 a 53 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor49a53anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor49a53anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor54a58anos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 54 a 58 </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor54a58anos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor54a58anos | currency: 'BRL'}} </mat-cell>
             </ng-container>
             <ng-container matColumnDef="valor59ouMaisAnos">
               <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 59 ou Mais </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor59ouMaisAnos | currency: 'BRL'}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor59ouMaisAnos | currency: 'BRL'}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="reajuste">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Reajuste </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.reajuste}} </mat-cell>
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.reajuste}} </mat-cell>
             </ng-container>
 
             <ng-container [matColumnDef]="profissao.nome" *ngFor="let profissao of todasProfissoes">
               <mat-header-cell *matHeaderCellDef mat-sort-header> {{profissao.nome }} </mat-header-cell>
-              <mat-cell *matCellDef="let opcao" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer">
+              <mat-cell *matCellDef="let opcao" [style.color]="'white'" [style.background-color]="opcao.tabela.operadora.cor" (click)="selecionaOpcao(opcao)" class="mouse-pointer">
                 <div style="overflow: auto; height: 48px;">
                   {{ getNomesEntidadesPorProfissao(opcao, profissao.nome) }}
                 </div>
