--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -18,57 +18,57 @@
           <mat-table style="width: 6000px" #sortTabela="matSort" [dataSource]="dataSourceTabela" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="id">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="nome">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estado">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="operadora">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="administradora">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="reajuste">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Reajuste </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.reajuste}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.reajuste}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="idadeMinima">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Min. </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMinima}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMinima}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="idadeMaxima">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Max.  </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMaxima}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMaxima}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtdMinVidas">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Vidas </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinVidas}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinVidas}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtdMinTitulares">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Titulares </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinTitulares}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinTitulares}} </mat-cell>
             </ng-container>
 
             <ng-container [matColumnDef]="profissao.nome" *ngFor="let profissao of todasProfissoes">
               <mat-header-cell *matHeaderCellDef mat-sort-header> {{profissao.nome }} </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer">
+              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer">
                 <div style="overflow: auto; height: 48px;">
                   {{ getNomesEntidadesPorProfissao(tabela, profissao.nome) }}
                 </div>
